--- a/sale_order_requirement/views/order_requirement.xml
+++ b/sale_order_requirement/views/order_requirement.xml
@@ -15,7 +15,7 @@
                     <field name="id" />
                     <field name="product_id" filter_domain="['|', '|', ('product_id','ilike',self),('new_product_id','ilike',self), ('production_product_id', 'ilike', self)]"/>
                     <field name="note" string="Order/Customer Ref" filter_domain="['|', ('sale_order_id','ilike',self),('client_order_ref','ilike',self)]"/>
-                    <field name="customer_id"/>
+                    <field name="customer_id" domain="[('customer', '=', True)]"/>
                     <separator orientation="vertical"/>
                     <group>
                         <field name="date_from" filter_domain="[('date','&gt;=',self)]"/>
