[control_dashboard] IMP domain + user

--- a/control_dashboard/views/ir_alert_config_view.xml
+++ b/control_dashboard/views/ir_alert_config_view.xml
@@ -42,11 +42,13 @@
 	            <field name="is_parent" on_change="onchange_model_id(is_parent)"/>
                     <field name="parent_id" attrs="{'readonly':[('is_parent','=',True)]}" domain="[('is_parent','=',True)]"/>
                     <newline/>
-                    <field name="date_comparison_field_id" attrs="{'readonly':[('is_parent','=',True)], 'required':[('is_parent','=',False)]}"/>
+                    <field name="domain_force" />
+                    <field name="date_comparison_field_id" attrs="{'readonly':[('is_parent','=',True)], 'required':[('is_parent','=',False)]}" />
+                    <field name="user_field_id" attrs="{'readonly':[('is_parent','=',True)], 'required':[('is_parent','=',False)]}" />
                     <field name="offset" attrs="{'readonly':[('is_parent','=',True)], 'required':[('is_parent','=',False)]}"/>
                     <field name="flag_not_state" attrs="{'readonly':[('is_parent','=',True)]}"/>
                     <field name="state_id" on_change="state_change(state_id, context)" domain="[('model_id', '=', model_id)]" attrs="{'readonly': ['|',('model_id','=', False),('is_parent','=',True)], 'required':[('is_parent','=',False)]}"/>
-	            <field name="state_comparison" invisible="1"/>
+	                <field name="state_comparison" invisible="1"/>
                     <separator string="Manage Dashboard Message" colspan="4"/>
                     <field name="message"/>
                     <separator string="Manage Email Message" colspan="4"/>
