--- a/control_dashboard/views/ir_alert_config_view.xml
+++ b/control_dashboard/views/ir_alert_config_view.xml
@@ -40,6 +40,7 @@
                     <field name="model_id" on_change="model_id_change(model_id, context)"/>
                     <field name="action_id" invisible="1"/>
                     <field name="digest" />
+                    <field name="active" />
                     <newline/>
 	            <field name="is_parent" on_change="onchange_model_id(is_parent)" invisible="1"/>
                     <field name="parent_id" attrs="{'readonly':[('is_parent','=',True)]}" domain="[('is_parent','=',True)]"/>
@@ -57,7 +58,7 @@
                     <field name="flag_email" attrs="{'readonly':[('is_parent','=',True)]}"/>
                     <field name="add_user_creator" attrs="{'readonly':[('flag_email','=',False)]}"/>
                     <field name="subject" attrs="{'readonly':[('flag_email','=',False)], 'required':[('flag_email','=',True)]}"/>
-                    <field name="email_message" attrs="{'readonly':[('flag_email','=',False)], 'required':[('flag_email','=',True)]}"/>
+
                 </form>
             </field>
 	</record>
