--- a/stock_picking_extended/views/picking_view.xml
+++ b/stock_picking_extended/views/picking_view.xml
@@ -205,6 +205,7 @@
                         <page string="Moves">
                             <field name="move_lines" nolabel="1">
                                 <tree string="Moves" colors="green:goods_ready">
+                                    <field name="date_expected" />
                                     <field name="product_id"/>
                                     <field name="product_qty" sum="product_sum"/>
                                     <field name="product_uom"/>
@@ -219,6 +220,7 @@
                                     <field name="picking_id" readonly="1"/>
                                     <field name="product_qty" readonly="1"/>
                                     <field name="sale_id" readonly="1"/>
+                                    <field name="date_expected" readonly="1"/>
                                     <field name="state"/>
                                     <separator string="Internal Note" colspan="4"/>
                                     <field name="internal_note" colspan="4" nolabel="1"/>
@@ -262,6 +264,7 @@
                     <field name="region" invisible="not context.get('show_delivery', False)"/>
                     <field name="note"/>
                     <field name="internal_note" />
+                    <field name="order_date_confirm" />
                     <field name="board_date" />
                     <field name="minimum_planned_date"/>
                     <field name="week_nbr" />
