[garazd_product_label] fix open on same view

--- a/garazd_product_label/wizard/print_product_label_views.xml
+++ b/garazd_product_label/wizard/print_product_label_views.xml
@@ -47,7 +47,7 @@
                     res_model="print.product.label"
                     view_mode="form"
                     view_type="form"
-                    target="inline"
+                    target="new"
                     multi="False"
                     context="{'default_product_ids': active_ids}"
                     key2="client_print_multi"/>
@@ -58,7 +58,7 @@
                     res_model="print.product.label"
                     view_mode="form"
                     view_type="form"
-                    target="inline"
+                    target="new"
                     multi="False"
                     context="{'default_product_ids': active_ids}"
                     key2="client_print_multi"/>
