--- a/sale_order_requirement/views/order_requirement.xml
+++ b/sale_order_requirement/views/order_requirement.xml
@@ -60,6 +60,7 @@
                             <field name="state" widget="statusbar" statusbar_colors='{"draft":"red","done":"black","cancel":"grey"}'/>
                             <button name="action_view_purchase_order" string="View Purchase Order" type="object" icon="STOCK_FULLSCREEN"/>
                             <button name="action_view_manufacturing_order" string="View Manufacturing Orders"  type="object" icon="STOCK_FULLSCREEN"/>
+                            <button name="action_force_all" string="Force" type="object" />
                         </page>
                         <page string="Full Explosion Order">
                             <field name="full_order_requirement_line_ids"
