--- a/sale_order_requirement/wizard/wizard_requirement.xml
+++ b/sale_order_requirement/wizard/wizard_requirement.xml
@@ -9,7 +9,8 @@
             <field name="type">form</field>
             <field name="arch" type="xml">
             <form string="Add Order Line" col="4" >
-                <field name="order_line_ids" required="1" colspan="8">
+                <field name="order_id" invisible="1"/>
+                <field name="order_line_ids" required="1" colspan="8" domain="[('order_requirement_id', '=', order_id), ('state', '=', 'draft')]">
                     <tree>
                         <field name="seq" />
                     <field name="sequence" invisible="1"/>
